<resources>
    <string name="app_name">Lab1</string>
    <string name="system_name">中山大学学生信息系统</string>
    <string name="student_id">学号：</string>
    <string name="password">密码：</string>
    <string name="input_id">请输入学号</string>
    <string name="input_password">请输入密码</string>
    <string name="student">学生</string>
    <string name="teacher">教职工</string>
    <string name="log_in">登录</string>
    <string name="register">注册</string>
</resources>
