<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root"
    tools:context="com.example.myapplication.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/system_name"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/systemName"
        android:layout_marginTop="20dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/sysu"
        android:id="@+id/imageView"
        android:contentDescription="@null"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/systemName"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:inputType="number"
        android:hint="@string/input_id"
        android:id="@+id/inputID"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="20dp"/>

    <EditText
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:inputType="textPassword"
        android:hint="@string/input_password"
        android:id="@+id/inputPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputID"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_id"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:id="@+id/studentID"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintBaseline_toBaselineOf="@id/inputID"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:id="@+id/Password"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintBaseline_toBaselineOf="@id/inputPassword"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="20dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id0"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <RadioButton
            android:id="@+id/id1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/student"
            android:checked="true"
            android:textSize="18sp"
            android:layout_marginRight="10dp"/>

        <RadioButton
            android:id="@+id/id2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/LogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/draw"
        app:layout_constraintTop_toBottomOf="@+id/id0"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toLeftOf="@+id/button"
        android:layout_marginRight="10dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/draw"
        android:id="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/id0"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@+id/LogIn"
        app:layout_constraintRight_toRightOf="parent"/>
</android.support.constraint.ConstraintLayout>
